<resources>
    <string name="app_name">appvehiculos</string>
    <string name="navigation_drawer_open">Abrir navegación</string>
    <string name="navigation_drawer_close">Cerrar navegación</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="nav_header_title">Renzo</string>
    <string name="nav_header_subtitle">pruebareal@hotmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gastos</string>
    <string name="menu_slideshow">Mis vehiculos</string>
    <string name="menu_vehiculoscrear">Añadir vehiculos</string>
    <string name="menu_promociones">Promociones</string>
    <string name="select_brand_prompt">Selecciona una marca</string>
    <string name="pdf_icon">pdf_icon</string>



</resources>
